--- a/form1.html
+++ b/form1.html
@@ -19,7 +19,7 @@
                 <input name="color" type="radio" value="black"> Black
                 <input name="color" type="radio" value="yellow"> Yellow
                 <input name="color" type="radio" value="pink"> Pink
-            </div>
+                <input name="color" type="radio" value="maroon"> Maroon           </div>
             <div>
                 <input name="country" list="countries" placeholder="Country">
                 <datalist id="countries">
